Prevent tiles from being destroyed on bad drag.

--- a/app/src/main/res/values/attrs_building_tile.xml
+++ b/app/src/main/res/values/attrs_building_tile.xml
@@ -3,5 +3,6 @@
         <attr name="canAcceptBuilding" format="boolean" />
         <attr name="canRemoveBuilding" format="boolean" />
         <attr name="preventTileReplacement" format="boolean" />
+        <attr name="canClearBuilding" format="boolean" />
     </declare-styleable>
 </resources>
