Callback when dropped on valid location

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         <com.example.alex.betweentwocities.BuildingIcon
             android:layout_width="wrap_content"
             custom:buildingType="shop"
+            custom:numberOfIcons="2"
             />
 
         <com.example.alex.betweentwocities.BuildingIcon
