--- a/app/src/main/res/values/attrs_building_icon.xml
+++ b/app/src/main/res/values/attrs_building_icon.xml
@@ -12,6 +12,6 @@
             <enum name="food_tavern" value="8" />
             <enum name="music_tavern" value="9" />
         </attr>
-        <attr name="singleIconTile" format="boolean" />
+        <attr name="numberOfIcons" format="integer" />
     </declare-styleable>
 </resources>
