--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,72 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     tools:context="com.example.alex.betweentwocities.MainActivity">
 
-    <GridLayout
-        android:id="@+id/building_icons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:columnCount="5"
-        android:rowCount="2"
-        >
-
-        <com.example.alex.betweentwocities.BuildingIcon
-            android:layout_width="wrap_content"
-            custom:buildingType="shop"
-            custom:numberOfIcons="2"
-            />
-
-        <com.example.alex.betweentwocities.BuildingIcon
-            android:layout_width="wrap_content"
-            custom:buildingType="factory"
-            />
-
-        <com.example.alex.betweentwocities.BuildingIcon
-            android:layout_width="wrap_content"
-            custom:buildingType="house"
-            />
-
-        <com.example.alex.betweentwocities.BuildingIcon
-            android:layout_width="wrap_content"
-            custom:buildingType="park"
-            />
-
-        <com.example.alex.betweentwocities.BuildingIcon
-            android:layout_width="wrap_content"
-            custom:buildingType="office"
-            />
-
-        <com.example.alex.betweentwocities.BuildingIcon
-            android:layout_width="wrap_content"
-            custom:buildingType="bed_tavern"
-            />
-
-        <com.example.alex.betweentwocities.BuildingIcon
-            android:layout_width="wrap_content"
-            custom:buildingType="music_tavern"
-            />
-
-        <TextView/>
-
-        <com.example.alex.betweentwocities.BuildingIcon
-        android:layout_width="wrap_content"
-        custom:buildingType="drink_tavern"
+    <include layout="@layout/layout_tile_selection"
+             android:id="@+id/building_icons"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignParentTop="true"
+             android:layout_centerHorizontal="true"
         />
-
-        <com.example.alex.betweentwocities.BuildingIcon
-        android:layout_width="wrap_content"
-        custom:buildingType="food_tavern"
-        />
-
-    </GridLayout>
 
     <Button
         android:id="@+id/score_btn"
