Removed Most view code, created a dummy service for testing

--- a/app/src/main/res/values/attrs_building.xml
+++ b/app/src/main/res/values/attrs_building.xml
@@ -1,6 +1,9 @@
 <resources>
-    <declare-styleable name="BuildingIcon">
-        <attr name="buildingType" format="enum">
+    <declare-styleable name="Building">
+        <attr name="CanReplace" format="boolean" />
+        <attr name="CanMove" format="boolean" />
+        <attr name="NumberOfTiles" format="integer" />
+        <attr name="BuildingType" format="enum">
             <enum name="blank" value="0"/>
             <enum name="factory" value="1"/>
             <enum name="house" value="2" />
